<resources>
    <string name="app_name">RTKGPS+</string>
    <string name="app_url">http://github.com/eltorio/RtkGps</string>
    <string name="app_version_label">Version</string>
    <string name="app_legacy_info_label">Legacy info</string>
    <string name="about_licenses">Legacy info</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_activity_label">About</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a report has been sent to my developer to help fix the issue!</string>
	<string name="title_activity_input_stream_settings">Input stream settings</string>
	<string name="title_activity_output_stream_settings">Output stream settings</string>
	<string name="title_activity_log_stream_settings">Log stream settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start_service">Start service</string>
    <string name="menu_stop_service">Stop service</string>
    <string name="menu_dropbox">Dropbox</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_select_solution_format">Select solution format</string>
    <string name="menu_select_gtime_format">Select time format</string>
    <string name="menu_about">About</string>
    <string name="menu_map_mode">Map mode</string>
    <string name="menu_map_mode_osm">OpenStreetMap</string>
    <string name="menu_map_mode_bing_aerial">Bing Aerial</string>
    <string name="menu_map_mode_bing_road">Bing Road</string>
    <string name="menu_map_mode_geoportail_map">Geoportail map</string>
    <string name="menu_map_mode_geoportail_cadastral">Geoportail cadastral</string>
    <string name="menu_map_mode_geoportail_orthoimages">Geoportail aerial</string>
    <string name="local_service_started">Local service started</string>
    <string name="local_service_stopped">Local service stopped</string>
    <string name="local_service_label">RtkGps</string>
    <string name="sky_plot_north">N</string>
    <string name="sky_plot_west">W</string>
    <string name="sky_plot_south">S</string>
    <string name="sky_plot_east">E</string>
    <string name="sky_plot_num_of_sat"># of Sat: %d</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navdraw_category_server">Server</string>
    <string name="navdraw_category_streams">Streams</string>
    <string name="navdraw_category_settings">Settings</string>
    <string name="navdraw_item_server_switch">Server</string>
    <string name="navdraw_ntripcaster_server_switch">NTRIP Caster</string>
    <string name="navdraw_item_status">Status</string>
    <string name="navdraw_item_map">Map</string>
	<string name="navdraw_item_input_streams">Input streams</string>
    <string name="navdraw_item_output_streams">Output streams</string>
    <string name="navdraw_item_log_streams">Log streams</string>
    <string name="navdraw_item_processing_options">Processing options</string>
    <string name="navdraw_item_solution_options">Solution options</string>
    <string name="navdraw_item_ntripcaster_options">Caster options</string>
    <string name="navdraw_item_save_settings">Save settings to file</string>
    <string name="navdraw_item_save_settings_finished">Settings saved to zip file in application directory (%s).</string>
    <string name="navdraw_item_save_settings_failed">Settings save failed into application directory (%s).</string>
    <string name="navdraw_item_load_settings">Load settings from file</string>
    <string name="navdraw_item_load_settings_finished">Settings loaded from zip file in application directory (%s).</string>
    <string name="navdraw_item_load_settings_failed">Settings file not found in application directory (%s).</string>
    <string-array name="rtk_server_receiver">
        <item>Rover</item>
        <item>Base</item>
        <item>Emphem</item>
    </string-array>
    <string name="gtime_format_gps">GPS</string>
    <string name="gtime_format_utc">UTC</string>
    <string name="gtime_format_local">Local</string>
    <string name="gtime_format_gps_tow">GPS TOW</string>
    <string name="solution_view_solution">Solution:</string>
    <string name="solution_view_geoid">Geoid:</string>
    <string name="solution_view_crs">CRS:</string>
    <string name="solution_view_age_text_format">Age: %1$.1fs\nRatio: %2$.1f\n#Of sat: %3$d</string>
    <string name="solution_view_format_wgs84">Lat/Lon/Height</string>
    <string name="solution_view_format_wgs84_float">Lat/Lon/Height — Float</string>
    <string name="solution_view_format_utm">UTM E/N/H/Zone</string>
    <string name="solution_view_format_proj4_lambertIIextended">Lambert II extended E/N/H</string>
    <string name="solution_view_format_proj4_lambert93">RGF93 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc43">RGF93 CC43 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc44">RGF93 CC44 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc45">RGF93 CC45 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc46">RGF93 CC46 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc47">RGF93 CC47 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc48">RGF93 CC48 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc49">RGF93 CC49 E/N/H</string>
    <string name="solution_view_format_proj4_lambert93_cc50">RGF93 CC50 E/N/H</string>
    <string name="solution_view_format_proj4_nad83">NAD83 E/N/H</string>
    <string name="solution_view_format_ecef">X/Y/Z — ECEF</string>
    <string name="solution_view_format_enu_baseline">E/N/U — Baseline</string>
    <string name="solution_view_format_pyl_baseline">Pitch/Yaw/Length — Baseline</string>
    <string name="solution_view_format_proj4_custom">User defined Proj4 a/b/c</string>
    <string-array name="solution_view_coordinates_wgs84">
        <item>Lat:</item>
        <item>Lon:</item>
        <item>Height:</item>
        <item >Altitude:</item>
    </string-array>
    <string-array name="solution_view_coordinates_utm">
        <item>Easting:</item>
        <item>Northing:</item>
        <item>Altitude:</item>
        <item >Zone:</item>
    </string-array>
    <string-array name="solution_view_coordinates_proj4_lambert93">
        <item>Easting:</item>
        <item>Northing:</item>
        <item>Altitude:</item>
    </string-array>
    <string-array name="solution_view_coordinates_proj4_nad83">
        <item>Easting:</item>
        <item>Northing:</item>
        <item>Altitude:</item>
    </string-array>
    <string-array name="solution_view_coordinates_ecef">
        <item>X:</item>
        <item>Y:</item>
        <item>Z:</item>
    </string-array>
    <string-array name="solution_view_coordinates_baseline_enu">
        <item>E:</item>
        <item>N:</item>
        <item>U:</item>
    </string-array>
    <string-array name="solution_view_coordinates_baseline_pyl">
        <item>Pitch:</item>
        <item>Yaw:</item>
        <item>Length:</item>
    </string-array>
    <string-array name="solution_view_coordinates_proj4_custom">
        <item>a:</item>
        <item>b:</item>
        <item>height:</item>
    </string-array>
    <string name="pmode_single">Single</string>
    <string name="pmode_dgps">DGPS/DGNSS</string>
    <string name="pmode_kinema">Kinematic</string>
    <string name="pmode_static">Static</string>
    <string name="pmode_statstart">Static — Start</string>
    <string name="pmode_moveb">Moving — base</string>
    <string name="pmode_fixed">Fixed</string>
    <string name="pmode_ppp_kinema">PPP — Kinematic</string>
    <string name="pmode_ppp_static">PPP — Static</string>
    <string name="pmode_ppp_fixed">PPP — Fixed</string>
    <string name="navsys_none">None</string>
    <string name="navsys_gps">GPS</string>
    <string name="navsys_sbs">SBAS</string>
    <string name="navsys_glo">GLONASS</string>
    <string name="navsys_gal">Galileo</string>
    <string name="navsys_qzs">QZSS</string>
    <string name="navsys_cmp">BeiDou</string>
    <string name="navsys_all">All</string>
    <string name="times_gpst">GPS time</string>
    <string name="times_utc">UTC</string>
    <string name="times_jst">JST</string>
    <string name="solq_none">None</string>
    <string name="solq_fix">Fixed</string>
    <string name="solq_float">Float</string>
    <string name="solq_sbas">SBAS</string>
    <string name="solq_dgps">DGPS/DGNSS</string>
    <string name="solq_single">Single</string>
    <string name="solq_ppp">PPP</string>
    <string name="solq_dr">Dead reckoning</string>
    <string name="solq_internal">Internal</string>
    <string name="solf_llh">Lat/Long/Height</string>
    <string name="solf_xyz">X/Y/Z — ECEF</string>
    <string name="solf_enu">E/N/U — Baseline</string>
    <string name="solf_nmea">NMEA 0183</string>
    <string name="solf_gsif">GSI-F1/2/3</string>
    <string name="strfmt_rtcm2">RTCM 2</string>
    <string name="strfmt_rtcm3">RTCM 3</string>
    <string name="strfmt_oem4">NovAtel OEMV/4</string>
    <string name="strfmt_oem3">NovAtel OEMV/3</string>
    <string name="strfmt_ubx">u-blox LEA-*T</string>
    <string name="strfmt_ss2">NovAtel Superstar II</string>
    <string name="strfmt_cres">Hemisphere</string>
    <string name="strfmt_stq">SkyTraq S1315F</string>
    <string name="strfmt_gw10">Furuno GW10</string>
    <string name="strfmt_javad">JAVAD GRIL/GREIS</string>
    <string name="strfmt_nvs">NVS NVC08C</string>
    <string name="strfmt_binex">BINEX</string>
    <string name="strfmt_rt17">Trimble RT17</string>
    <string name="strfmt_lexr">Furuno LPY-10000</string>
    <string name="strfmt_sept">Septentrio</string>
    <string name="strfmt_sirf">SiRF</string>
    <string name="strfmt_rinex">RINEX</string>
    <string name="strfmt_sp3">SP3</string>
    <string name="strfmt_rnxclk">RINEX CLK</string>
    <string name="strfmt_sbas">SBAS messages</string>
    <string name="strfmt_nmea">NMEA 0183</string>
    <string name="str_none">None</string>
    <string name="str_serial">Serial</string>
    <string name="str_file">File</string>
    <string name="str_tcpsvr">TCP Server</string>
    <string name="str_tcpcli">TCP Client</string>
    <string name="str_udp">UDP</string>
    <string name="str_ntripsvr">NTRIP server</string>
    <string name="str_ntripcli">NTRIP client</string>
    <string name="str_ntripcas">NTRIP caster</string>
    <string name="str_ftp">FTP</string>
    <string name="str_http">HTTP</string>
    <string name="str_udpcli">UDP Client</string>
    <string name="str_udpsvr">UDP Server</string>
    <string name="str_unixsvr">Unix domain socket server</string>
    <string name="str_bluetooth">Bluetooth</string>
    <string name="str_mobilemapper">MobileMapper 50 internal</string>
    <string name="str_usb">USB</string>
    <string name="str_membuf">Memory buffer</string>
    <string name="ionoopt_off">Off</string>
    <string name="ionoopt_brdc">Broadcast model</string>
    <string name="ionoopt_sbas">SBAS model</string>
    <string name="ionoopt_iflc">L1/L2 or L1/L5 iono-free LC</string>
    <string name="ionoopt_est">Estimate STEC</string>
    <string name="ionoopt_tec">IONEX TEC model</string>
    <string name="ionoopt_qzs">QZSS broadcast model</string>
    <string name="ionoopt_lex">QZSS LEX ionosphere</string>
    <string name="ionoopt_stec">SLANT TEC model</string>
    <string name="tropopt_off">Off</string>
    <string name="tropopt_saas">Saastamoinen model</string>
    <string name="tropopt_sbas">SBAS model</string>
    <string name="tropopt_est">ZTD estimation</string>
    <string name="tropopt_estg">ZTD+grad estimation</string>
    <string name="tropopt_cor">ZTD correction</string>
    <string name="tropopt_corg">ZTD+grad correction</string>
    <string name="geoid_embedded">Embedded</string>
    <string name="menu_add_point">Add point to session</string>
</resources>