<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_map_mode"
		android:title="@string/menu_map_mode"
		app:showAsAction="never">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/menu_map_mode_osm"
					android:title="@string/menu_map_mode_osm" />
				<item
					android:id="@+id/menu_map_mode_bing_road"
					android:title="@string/menu_map_mode_bing_road" />
				<item
					android:id="@+id/menu_map_mode_bing_aerial"
					android:title="@string/menu_map_mode_bing_aerial" />
				<item
					android:id="@+id/menu_map_mode_geoportail_map"
					android:title="@string/menu_map_mode_geoportail_map" />
				<item
					android:id="@+id/menu_map_mode_geoportail_cadastral"
					android:title="@string/menu_map_mode_geoportail_cadastral" />
				<item
					android:id="@+id/menu_map_mode_geoportail_orthoimages"
					android:title="@string/menu_map_mode_geoportail_orthoimages" />
			</group>
		</menu>
	</item>

</menu>
